# HOI4GFXManager

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  error.txt  focusgfxshine.py  gui_previewer.py  main.py  main_improved.py  pyproject.toml
.claude/: settings.local.json
prompt/: note.txt  note2.txt  note3.txt  note4.txt  note5.txt
scripts/: bootstrap.ps1  check.ps1  run.ps1
src/hoi4_gfx_manager/: __init__.py  app.py
src/hoi4_gfx_manager/services/: analysis.py  focus_shine.py  gfx_repository.py  image_conversion.py
src/hoi4_gfx_manager/ui/: main_window.py  theme.py  tree_widget.py
src/hoi4_gfx_manager/ui/dialogs/: __init__.py  batch_convert.py  batch_import.py  drag_drop.py  focus_shine.py  gfx_edit.py  project_manager.py
tasks/: lessons.md  todo.md
tests/: test_dds_conversion.py
