[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hoi4-gfx-manager"
version = "2.1.0"
description = "Desktop GFX management toolkit for Hearts of Iron IV modding."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { file = "LICENSE.md" }
authors = [
  { name = "HOI4 GFX Manager contributors" },
]
keywords = ["hoi4", "modding", "pyqt6", "gfx", "gui"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Games/Entertainment",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
  "PyQt6>=6.10.2,<6.11",
  "Pillow>=12.1.1,<13",
  "numpy>=2.4.3,<3",
  "opencv-python>=4.13.0.92,<4.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "ruff>=0.13,<0.15",
]

[project.scripts]
hoi4-gfx-manager = "main:main"
hoi4-focus-shine = "focusgfxshine:main"

[tool.setuptools]
py-modules = ["main", "gui_previewer", "focusgfxshine"]
